# resume-screener-ai

./: README.md  pyproject.toml
docs/phase1/: 01_Plan.md  02_TechnicalDetails.md  03_DecisionPoints.md
src/resume_screener_ai/: __init__.py  state.py
